<resources>
    <string name="app_name">wasooli_aab</string>


    // Strings
    <string name="slogan_name">Meet\npeople online</string>
    <string name="todo">TODO</string>
    <string name="user_tagline">People over here meeting each other and having\na lot of fun</string>
    <string name="user_signup">Signup</string>
    <string name="user_login">login</string>
    <string name="how_to_register">How to register?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forget_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">create account</string>
    <string name="create_nAccount">Create\nAccount</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="choose_gender">Choose Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add new</string>
    <string name="add">Add</string>
    <string name="enter_name">Enter Name</string>
    <string name="father_name">Father Name</string>
</resources>