<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_color"
    android:transitionName="transition_login"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/login_bg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/top_background1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="30sp"
        >
        <ImageView
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/white_arrow_back_24"
            android:padding="0dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textStyle="bold"
            android:textColor="@color/accent_color"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="150dp">

            <!--            material design text Fields-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username"
                android:textColorHint="@color/secondary_color"
                app:boxStrokeColor="@color/input_border_color"
                app:boxStrokeWidthFocused="2dp"
                app:hintTextColor="@color/primary_color"
                app:startIconDrawable="@drawable/ic_baseline_supervised_user_circle_24"
                app:startIconTint="@color/primary_color"
                app:endIconMode="clear_text"
                app:endIconTint="@color/primary_color"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/primary_color"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                android:textColorHint="@color/secondary_color"
                app:boxStrokeColor="@color/input_border_color"
                app:hintTextColor="@color/primary_color"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:startIconTint="@color/primary_color"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/primary_color"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/primary_color"
                    android:inputType="textPassword"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <!--            remember me and forget password buttons-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:textColor="@color/primary_color"
                    android:buttonTint="@color/primary_color"
                    android:backgroundTint="@color/primary_color"
                    android:layout_centerVertical="true"
                    />


                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forget_password"
                    android:textAllCaps="false"
                    android:backgroundTint="#00000000"
                    android:textColor="@color/primary_color"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />




            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_login"
                android:layout_marginTop="25dp"
                android:paddingVertical="13dp"
                android:id="@+id/login_btn"
                android:elevation="5dp"
                android:textSize="16sp"
                android:backgroundTint="@color/primary_color"
                android:textColor="@color/accent_color"
                android:transitionName="transition_login"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:layout_marginTop="10dp"
                android:paddingVertical="20dp"
                android:backgroundTint="#00000000"
                android:textColor="@color/primary_color"
                android:onClick="callUserSignup"
                android:elevation="0dp"
                android:layout_gravity="center"
                android:transitionName="transition_signup"
                android:id="@+id/login_signup_btn"
                />


        </LinearLayout>






    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>